--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -307,6 +307,28 @@ dino_data %>%
 
 3.  Plot `y` vs. `x` for the `star` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?
 
+The correlation for the star dataset is -0.0629611	which is very similar to that of the dino dataset.
+
+```{r}
+star_data <- datasaurus_dozen %>%
+  filter(dataset == "star")
+```
+
+```{r fig.fullwidth=TRUE}
+ggplot(data = star_data, mapping = aes(x = x, y = y)) +
+  geom_point()
+```
+
+```{marginfigure}
+Start with `star_data` and calculate a summary statistic that we will call `r` as the `cor`relation between `x` and `y`.
+```
+
+```{r}
+star_data %>%
+  summarize(r = cor(x, y))
+```
+
+
 🧶 ✅ ⬆️ *This is another good place to pause, knit, commit changes with the commit message "Added answer for Ex 3", and push. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
 4.  Plot `y` vs. `x` for the `circle` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?
