--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -333,6 +333,26 @@ star_data %>%
 
 4.  Plot `y` vs. `x` for the `circle` dataset. You can (and should) reuse code we introduced above, just replace the dataset name with the desired dataset. Then, calculate the correlation coefficient between `x` and `y` for this dataset. How does this value compare to the `r` of `dino`?
 
+The value of the correlation coefficient is -0.06834336	which again is very close to that of dino and star's dataset. This is likely because none of them have been set linear paths.
+
+```{r}
+circle_data <- datasaurus_dozen %>%
+  filter(dataset == "circle")
+```
+
+```{r fig.fullwidth=TRUE}
+ggplot(data = circle_data, mapping = aes(x = x, y = y)) +
+  geom_point()
+```
+```{marginfigure}
+Start with `circle_data` and calculate a summary statistic that we will call `r` as the `cor`relation between `x` and `y`.
+```
+
+```{r}
+circle_data %>%
+  summarize(r = cor(x, y))
+```
+
 🧶 ✅ ⬆️ *You should pause again, commit changes with the commit message "Added answer for Ex 4", and push. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
 ```{marginfigure}
